--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -135,7 +135,7 @@ section {
   box-sizing: border-box;
   width: 48px;
   height: 48px;
-  border: 2px solid #cb6ce6;
+  border: 2px solid #000000;
   position: absolute;
   left: 0;
   top: 0;
@@ -143,7 +143,7 @@ section {
 }
 
 .loader::after {
-  border-color: #5271ff;
+  border-color: #b8b9be;
   animation-direction: alternate-reverse;
 }
 
